# psipilot-assistant

./: .dockerignore  .env.example  .gitignore  ACTIVITIES_TAB_CACHE_FIX.md  ALL_FIXES_RESUBMIT_RU.md  BUILD_COMMANDS.md  CACHE_FIX_COMPLETE.md  CASE_SUMMARY_CACHE_FIX.md  CHANGELOG_SECURITY.md  CHECK_ENV_VARS.md  CLAUDE.md  CODE_REVIEW_PERFORMANCE_STABILITY.md  CODE_REVIEW_SUMMARY_RU.md  CODE_REVIEW_SYSTEM_SCALE_RU.md  CREATE_USERS.md  DEDUPLICATION_FIX.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FIND_SUPABASE_URL.md  IMPROVEMENT_PLAN.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PATIENT_DETAIL_CACHE_FIX.md  PERFORMANCE_AUDIT_REPORT.md  PERFORMANCE_FIX_PLAN.md  QUICKSTART.md  QUICK_START_FIXES.md  QUICK_TEST.md  README.md  REMOTE_SUPABASE_SETUP.md  RISK_ANALYSIS.md  SECURITY_IMPLEMENTATION.md  SECURITY_SETUP.md  SESSIONS_PAGE_CACHE_FIX.md  SETUP.md  TESTING_GUIDE.md  TEST_CRYPTO.md  TRANSCRIPTION_SYNC_FIX.md  TROUBLESHOOTING_LOADING.md  TROUBLESHOOTING_REQUESTS.md  (+19 more)
deploy/: .env.production.example  Caddyfile  DEPLOY_BEGET.md  deploy.sh  fix-kong-api-upstream.sh  nginx.conf
docs/: AI_IMPLEMENTATION_STATUS.md  AI_SESSION_ANALYSIS_SPEC.md  AUDIO_RECORDING_TRANSCRIPTION.md  BUGFIXES.md  INDEX.md  INDEXEDDB_EMPTY_CHECK.md  LOCAL_RECORDING_STORAGE_TESTING.md  MIGRATION_013.md  SECURITY_AUDIT_REPORT.md  SECURITY_SUMMARY.md  SESSION_NOTES_AND_FILES.md  SESSION_TABS_PERSISTENCE.md  SessionsPage-dependency-graph.md  TROUBLESHOOTING_LOGIN.md  TROUBLESHOOTING_RECORDING.md  USER_CREATION.md  (+2 more)
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/src/: main.rs
(+304 files in other folders)
